@@ -1,11 +1,12 @@
 package com.goorm.shoppingmall.domain.cart.dto;
 
 import com.goorm.shoppingmall.domain.cart.entity.Cart;
+import com.goorm.shoppingmall.domain.product.entity.Product;
 import lombok.Builder;
 import lombok.Getter;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Getter
 @Builder
@@ -16,11 +17,11 @@ public class CartResponse {
     private int totalPrice;   // 전체 합계
     private int totalCount;   // 전체 수량
 
-    public static CartResponse from(Cart cart) {
+    public static CartResponse from(Cart cart, Map<Long, Product> productsById) {
         List<CartItemResponse> items = cart.getCartItems()
                 .stream()
-                .map(CartItemResponse::from)
-                .collect(Collectors.toList());
+                .map(item -> CartItemResponse.from(item, productsById.get(item.getProductId())))
+                .toList();
 
         int totalPrice = items.stream()
                 .mapToInt(CartItemResponse::getSubtotal)
